add svnUpgrade.sh,modify tomcat.sh etc.